Fix sarbatoreste button alignment

--- a/style.scss
+++ b/style.scss
@@ -730,6 +730,10 @@ html {
 
 			a {
 				margin-top: 5rem;
+
+				@media screen and (max-width: $phone-breakpoint) {
+					margin-top: 2rem;
+				}
 			}
 
 			&__button {
@@ -761,7 +765,6 @@ html {
 				@media screen and (max-width: $phone-breakpoint) {
 					display: block;
 					padding: 0.5rem 2rem;
-					margin-top: 2rem;
 				}
 			}
 
